// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markup Native tests on android does not render a script tag 1`] = `<View />`;

exports[`Markup Native tests on android does not render an image tag 1`] = `<View />`;

exports[`Markup Native tests on android renders a mixture of tags 1`] = `
<View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      href="http://www.google.com"
    >
      some link here
    </Text>
  </View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      some text here
    </Text>
  </View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontStyle": "italic",
        }
      }
    >
       some more text here
    </Text>
  </View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      some other text here
    </Text>
  </View>
</View>
`;

exports[`Markup Native tests on android renders a single paragraph 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
>
  This is the text for paragraph one
</Text>
`;

exports[`Markup Native tests on android renders multiple children 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "red",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    This is the text for paragraph one
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    This is the text for paragraph two
  </Text>
</Text>
`;

exports[`Markup Native tests on android renders multiple paragraphs 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    This is the text for paragraph one
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    This is the text for paragraph two
  </Text>
</View>
`;

exports[`Markup Native tests on android renders multiple paragraphs with a pull quote 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    This is the text for paragraph one
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    This is the text for paragraph two
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    This is the text for paragraph two
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    This is the text for paragraph two
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    This is the text for paragraph two
  </Text>
  <View
    style={
      Object {
        "marginBottom": 30,
        "marginTop": 0,
        "paddingLeft": 10,
        "paddingRight": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": "TimesModern-Regular",
            "fontSize": 75,
            "marginBottom": -40,
            "marginTop": 0,
          },
          Object {
            "color": "#696969",
          },
        ]
      }
    >
      “
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Regular",
          "fontSize": 25,
          "lineHeight": 30,
        }
      }
    >
      [The judgement was] taken because of the evidence available in the court today, that the grandmother is an appropriate carer for the child
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "height": 20,
          "marginTop": 10,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 13,
              "marginBottom": 0,
            },
            Object {
              "color": "#696969",
            },
          ]
        }
      >
        Katie Glass
      </Text>
    </View>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    This is the text for paragraph two
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    This is the text for paragraph two
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    This is the text for paragraph two
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    This is the text for paragraph two
  </Text>
</View>
`;

exports[`Markup Native tests on android renders multiple paragraphs with ads 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    This is the text for paragraph one
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    This is the text for paragraph two
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    This is the text for paragraph two
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    This is the text for paragraph two
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    This is the text for paragraph two
  </Text>
  <Ad
    pos="inline-ad"
    section="article"
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderTopColor": "#DBDBDB",
        "borderTopWidth": 1,
        "paddingBottom": 10,
        "paddingTop": 10,
      }
    }
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    This is the text for paragraph two
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    This is the text for paragraph two
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    This is the text for paragraph two
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    This is the text for paragraph two
  </Text>
</View>
`;

exports[`Markup Native tests on android renders tags nested 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
>
  Some text is here 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    and there is some 
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      more text 
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        and in here
      </Text>
    </Text>
     after it too
  </Text>
   and here
</Text>
`;

exports[`Markup Native tests on android renders the bold tag 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "fontWeight": "bold",
    }
  }
>
  some text here
</Text>
`;

exports[`Markup Native tests on android renders the italic tag 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "fontStyle": "italic",
    }
  }
>
   some more text here
</Text>
`;

exports[`Markup Native tests on android renders the line break tag 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
>
  

</Text>
`;

exports[`Markup Native tests on android renders the span tag 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
>
  some other text here
</Text>
`;

exports[`Markup Native tests on android renders wrapped tags 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
>
  Camilla Long is 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontStyle": "italic",
      }
    }
  >
    the Sunday Times
  </Text>
   film critic. She also writes interviews and a column, and was named 
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontWeight": "bold",
      }
    }
  >
    interviewer of the year
  </Text>
   at the British Press Awards in 2010 and 2016.
</Text>
`;
